# walkgen

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
include/: mpc-walkgen.h
include/mpc-walkgen/: api.h  com-body.h  constants.h  debug.h  dynamics-builder.h  foot-body.h  gettimeofday.h  heuristic-preview.h  interpolation.h  lssol-parser.h  mpc-debug.h  orientations-preview.h  qld-parser.h  qp-builder.h  qp-generator.h  qp-matrix.h  qp-preview.h  qp-solver.h  qp-vector.h  qp-wrapper-inl.h  qpoases-parser.h  realclock.h  rigid-body-system-inl.h  rigid-body-system.h  rigid-body.h  sharedpgtypes.h  sharedtypes.h  state-fsm.h  stopwatch.h  tools-inl.h  tools.h  types.h  walkgen-abstract.h  walkgen.h
include/mpc-walkgen/common/: sharedpgtypes.h
include/mpc-walkgen/humanoid/: sharedpgtypes.h  walkgen-abstract.h
include/mpc-walkgen/zebulon/: sharedpgtypes.h
interfaces/matlab/plots/: plot-prw-traj-animated(t,x,y).m  plot-prw-traj-animated(x,y).m  plot-prw-traj-animated-txy.m  plot-prw-traj-animated-xy.m  plot-prw-traj-static.m  plot-prw-traj-static_2nd.m  plot-prw-traj-static_3rd.m  plot_com_cop_feet.m  plot_feet.m  plot_resolution_data.m
interfaces/matlab/simulink/: .gitignore  make.m  make_debug.m  make_release.m  mexit.m  rtwmakecfg.m  second_order_dynamics.m  sfunction.info  walkgen-sfun.cpp  walkgen.mdl  walkgen_cpp.cpp  walkgen_sfun.cpp
src/: .gitignore  Makefile  com-body.cpp  debug.cpp  dynamics-builder.cpp  foot-body.cpp  gettimeofday.cpp  heuristic-preview.cpp  interpolation.cpp  lssol-parser.cpp  make_dependencies.mk  make_linux.mk  make_vxworks.mk  make_vxworks_intel.mk  mpc-debug.cpp  orientations-preview.cpp  qld-parser.cpp  qp-builder.cpp  qp-generator.cpp  qp-matrix.cpp  qp-preview.cpp  qp-solver.cpp  qp-vector.cpp  qpoases-parser.cpp  realclock.cpp  rigid-body-system.cpp  rigid-body.cpp  sharedpgtypes.cpp  sharedtypes.cpp  state-fsm.cpp  stopwatch.cpp  tools.cpp  types.cpp  walkgen.cpp
src/common/: gettimeofday.h  interpolation.cpp  interpolation.h  mpc-debug.h  qp-matrix.cpp  qp-matrix.h  qp-solver.cpp  qp-solver.h  qp-vector.cpp  qp-vector.h  sharedpgtypes.cpp  tools.cpp  tools.h  types.h
src/common/qp-solvers/: lssol-solver.h  qpoases-solver.cpp  qpoases-solver.h
src/humanoid/: orientations-preview.cpp  orientations-preview.h  qp-generator.cpp  qp-generator.h  qp-preview.cpp  qp-preview.h  rigid-body-system-inl.h  rigid-body-system.cpp  rigid-body-system.h  rigid-body.cpp  rigid-body.h  sharedpgtypes.cpp  state-fsm.cpp  state-fsm.h  state-solver.cpp  types.cpp  types.h  walkgen-abstract.cpp  walkgen.cpp  walkgen.h
src/humanoid/rigid-bodies/: com-body.cpp  com-body.h  foot-body.cpp  foot-body.h
src/zebulon/: qp-generator-orientation.cpp  qp-generator.cpp  walkgen.cpp
tests/c++/: .gitignore  Makefile  dynamics_test.cpp  make_dependencies.mk  measure_time.cpp  pid-mode.cpp  test_const_map.cpp  test_const_map.sh  test_zero_map.cpp  test_zero_map.sh  walk.cpp  walk.sh
tests/matlab/: BuildDiscreteSystems.m  BuildInputMatrix.m  BuildStateMatrix.m  Discretize.m  second_order_dynamics.m
unittest/: CMakeLists.txt  bench-qpsolver.cpp  test-all-solvers.cpp  test-qpoases.cpp  test-qpsolver.cpp  test-rotation.cpp  test-walk.cpp  tools-rotation.cpp  tools-rotation.h
unittest/use-solver/: CMakeLists.txt  test-humanoid.cpp  walkgen.mdl  walkgen_cpp.cpp
unittest/use-solver/plots/: plot-preview.m  plot-prw-traj-animated(t,x,y).m  plot-prw-traj-animated(x,y).m  plot-prw-traj-static.m  plot_com_cop_feet.m  plot_feet.m
unittests/c++/: .gitignore  Makefile  make_dependencies.mk  test-walk-old.cpp  walk.cpp
unittests/c++/plots/: plot-test-walk.py
